Added a new demo API for reservations.
