# server/api/controllers/reservations/router.js
@@ -1,0 +1,5 @@
+import * as express from 'express';
+import controller from './controller'
+export default express.Router()
+    .get('/:id', ::controller.getById);
+
